--- a/Server/package.json
+++ b/Server/package.json
@@ -23,6 +23,7 @@
     "moment": "^2.30.1",
     "mongoose": "^8.7.2",
     "multer": "^1.4.5-lts.1",
+    "nodemailer": "^7.0.3",
     "stripe": "^17.5.0",
     "uuid": "^11.0.5"
   },
