--- a/App/package.json
+++ b/App/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.7.7",
     "framer-motion": "^11.11.9",
     "gsap": "^3.12.5",
+    "jwt-decode": "^4.0.0",
     "number-counter": "^1.0.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
